Refactor tables for improved readability and consistency

--- a/tutorials/python-1.ipynb
+++ b/tutorials/python-1.ipynb
@@ -846,42 +846,40 @@
     "Some common operations on sets are:\n",
     "\n",
     "| Operator | Description | Example | Result |\n",
-    "| -------- | ----------- | -------- | -------|\n",
-    "| `\\|`     | Union | `{1, 2, 3} \\| {3, 4, 5}` | `{1, 2, 3, 4, 5}`\n",
-    "| `&`      | Intersection | `{1, 2, 3} & {3, 4, 5}` | `{3}`\n",
-    "| `-`      | Difference | `{1, 2, 3} - {3, 4, 5}` | `{1, 2}`\n",
-    "| `^`      | Symmetric difference | `{1, 2, 3} ^ {3, 4, 5}` | `{1, 2, 4, 5}`\n",
-    "| `in`     | Check if a value is in a set | `3 in {1, 2, 3}` | `True`\n",
-    "| `==`     | Check if two sets are equal | `{1, 2, 3} == {1, 2, 3, 4}` | `False`\n",
-    "| `<=`     | Check if a set is a subset of another set | `{1, 2} <= {1, 2}` | `True`\n",
-    "| `>=`     | Check if a set is a superset of another set | `{1, 2, 3, 4} >= {1, 2}` | `True`\n",
-    "| `<`      | Check if a set is a strict subset of another set | `{1, 2} < {1, 2}` | `False`\n",
-    "| `>`      | Check if a set is a strict superset of another set | `{1, 2, 3, 4} > {1, 2}` | `True`\n",
+    "| -------- | ----------- | ------- | ------ |\n",
+    "| `\\|`     | Union | `{1, 2, 3} \\| {3, 4, 5}` | `{1, 2, 3, 4, 5}` |\n",
+    "| `&`      | Intersection | `{1, 2, 3} & {3, 4, 5}` | `{3}` |\n",
+    "| `-`      | Difference | `{1, 2, 3} - {3, 4, 5}` | `{1, 2}` |\n",
+    "| `^`      | Symmetric difference | `{1, 2, 3} ^ {3, 4, 5}` | `{1, 2, 4, 5}` |\n",
+    "| `in`     | Check if a value is in a set | `3 in {1, 2, 3}` | `True` |\n",
+    "| `==`     | Check if two sets are equal | `{1, 2, 3} == {1, 2, 3, 4}` | `False` |\n",
+    "| `<=`     | Check if a set is a subset of another set | `{1, 2} <= {1, 2}` | `True` |\n",
+    "| `>=`     | Check if a set is a superset of another set | `{1, 2, 3, 4} >= {1, 2}` | `True` |\n",
+    "| `<`      | Check if a set is a strict subset of another set | `{1, 2} < {1, 2}` | `False` |\n",
+    "| `>`      | Check if a set is a strict superset of another set | `{1, 2, 3, 4} > {1, 2}` | `True` |\n",
+    "\n",
     "\n",
     "You can also use the corresponding methods for some of these operations:\n",
-    "\n",
     "| Method | Description | Example | Result |\n",
-    "| ------ | ----------- | -------- | -------|\n",
-    "| `union()` | Return the union of two sets | `{1, 2, 3}.union({3, 4, 5})` | `{1, 2, 3, 4, 5}`\n",
-    "| `intersection()` | Return the intersection of two sets | `{1, 2, 3}.intersection({3, 4, 5})` | `{3}`\n",
-    "| `difference()` | Return the difference of two sets | `{1, 2, 3}.difference({3, 4, 5})` | `{1, 2}`\n",
-    "| `symmetric_difference()` | Return the symmetric difference of two sets | `{1, 2, 3}.symmetric_difference({3, 4, 5})` | `{1, 2, 4, 5}`\n",
-    "| `isequal()` | Check if two sets are equal | `{1, 2, 3}.isequal({1, 2, 3})` | `True` \n",
-    "| `issubset()` | Check if a set is a subset of another set | `{1, 2}.issubset({1, 2, 3})` | `True`\n",
-    "| `issuperset()` | Check if a set is a superset of another set | `{1, 2}.issuperset({1, 2, 3})` | `False`\n",
-    "| `isdisjoint()` | Check if two sets are disjoint | `{1, 2, 3}.isdisjoint({3, 4, 5})` | `False`\n",
+    "| ------ | ----------- | -------- | ------- |\n",
+    "| `union()` | Return the union of two sets | `{1, 2, 3}.union({3, 4, 5})` | `{1, 2, 3, 4, 5}` |\n",
+    "| `intersection()` | Return the intersection of two sets | `{1, 2, 3}.intersection({3, 4, 5})` | `{3}` |\n",
+    "| `difference()` | Return the difference of two sets | `{1, 2, 3}.difference({3, 4, 5})` | `{1, 2}` |\n",
+    "| `isequal()` | Check if two sets are equal | `{1, 2, 3}.isequal({1, 2, 3})` | `True` |\n",
+    "| `issubset()` | Check if a set is a subset of another set | `{1, 2}.issubset({1, 2, 3})` | `True` |\n",
+    "| `issuperset()` | Check if a set is a superset of another set | `{1, 2}.issuperset({1, 2, 3})` | `False` |\n",
+    "| `isdisjoint()` | Check if two sets are disjoint | `{1, 2, 3}.isdisjoint({3, 4, 5})` | `False` |\n",
     "\n",
     "\n",
     "To update a set or get an element from a set use the following methods:\n",
-    "\n",
-    "| Method | Description | Example | Result |\n",
-    "| ------ | ----------- | -------- | -------|\n",
-    "| `add()` | Add an element to a set | `{1, 2, 3}.add(4)` | `{1, 2, 3, 4}`\n",
-    "| `remove()` | Remove an existing element from a set | `{1, 2, 3}.remove(2)` | `{1, 3}`\n",
-    "| `discard()` | Remove an element from a set | `{1, 2, 3}.discard(2)` | `{1, 3}`\n",
-    "| `update()` | Add multiple elements to a set | `{1, 2, 3}.update({3, 4, 5})` | `{1, 2, 3, 4, 5}`\n",
-    "| `pop()` | Remove and return an arbitrary element from a set | `{1, 2, 3}.pop()` | `{2, 3}`\n",
-    "| `clear()` | Remove all elements from a set | `{1, 2, 3}.clear()` | `{}`\n",
+    "| Method      | Description                                        | Example                            | Result               |\n",
+    "|-------------|----------------------------------------------------|------------------------------------|----------------------|\n",
+    "| `add()`     | Add an element to a set                            | `{1, 2, 3}.add(4)`                 | `{1, 2, 3, 4}`       |\n",
+    "| `remove()`  | Remove an existing element from a set              | `{1, 2, 3}.remove(2)`              | `{1, 3}`             |\n",
+    "| `discard()` | Remove an element from a set                       | `{1, 2, 3}.discard(2)`             | `{1, 3}`             |\n",
+    "| `update()`  | Add multiple elements to a set                     | `{1, 2, 3}.update({3, 4, 5})`      | `{1, 2, 3, 4, 5}`    |\n",
+    "| `pop()`     | Remove and return an arbitrary element from a set  | `{1, 2, 3}.pop()`                  | `{2, 3}`             |\n",
+    "| `clear()`   | Remove all elements from a set                     | `{1, 2, 3}.clear()`                | `{}`                 |\n",
     "\n",
     "> *Note*: If you try to remove an element that is not in the set, you will get a `KeyError`. To avoid this, you can use the `discard()` method instead of the `remove()` method, which does not raise an error if the element is not found.\n"
    ]
